# otot

./: Cargo.toml  README.md
.cargo/: release.toml
.github/workflows/: publish.yml
src/: browser.rs  database.rs  lib.rs  main.rs  url_classify.rs
tests/: cli.rs
