[package]
name = "otot"
version = "0.3.3"
edition = "2024"
authors = ["Matthew Lese matthewjlese@gmail.com"]
description = "Fuzzy URL opener for the terminal"
license = "MIT"
repository = "https://github.com/idiomattic/otot"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
confy = "2.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
fuzzy-matcher = "0.3.7"
log = "0.4.29"
open = "5.3.3"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
signal-hook = "0.4.1"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
